--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 src/main/resources/application-oauth.properties
+src/main/resources/application-real-db.properties
 
 ### STS ###
 .apt_generated
