--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ src/main/resources/application-real-db.properties
 ### node ###
 vue/pygmalion/node_modules
 vue/pygmalion/dist
+src/main/resources/static/*
 .env.local
 .env.*.local
 
