--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,10 @@ src/main/resources/application-real-db.properties
 vue/pygmalion/node_modules
 vue/pygmalion/dist
 vue/pygmalion/public/Build
-src/main/resources/static/*
+src/main/resources/static/
 .env.local
 .env.*.local
+
 
 npm-debug.log*
 yarn-debug.log*
